// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentPackConstraints /> should render with created constraints 1`] = `
<ContentPackConstraints
  constraints={
    Array [
      Object {
        "constraint": Object {
          "fulfilled": true,
          "type": "server-version",
          "version": ">=3.0.0-alpha.2+af8d8e0",
        },
        "fulfilled": true,
      },
      Object {
        "constraint": Object {
          "fulfilled": false,
          "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
          "type": "plugin-version",
          "version": ">=3.0.0-alpha.2",
        },
        "fulfilled": false,
      },
    ]
  }
  isFulfilled={false}
>
  <div>
    <h2>
      Constraints
    </h2>
    <br />
    <br />
    <DataTable
      className=""
      dataRowFormatter={[Function]}
      displayKey="value"
      filterBy=""
      filterKeys={Array []}
      filterLabel="Filter"
      filterSuggestions={Array []}
      headerCellFormatter={[Function]}
      headers={
        Array [
          "Name",
          "Type",
          "Version",
          "Fulfilled",
        ]
      }
      id="content-packs-constraints"
      noDataText="No data available."
      rowClassName=""
      rows={
        Array [
          Object {
            "fulfilled": false,
            "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
            "type": "plugin-version",
            "version": ">=3.0.0-alpha.2",
          },
          Object {
            "fulfilled": true,
            "type": "server-version",
            "version": ">=3.0.0-alpha.2+af8d8e0",
          },
        ]
      }
      sortBy={[Function]}
      useResponsiveTable={true}
    >
      <div>
        <div
          className="row "
        >
          <div
            className="col-md-12"
          >
            <div
              className="data-table table-responsive"
              id="content-packs-constraints"
            >
              <table
                className="table "
              >
                <thead>
                  <tr>
                    <DataTableElement
                      element="Name"
                      formatter={[Function]}
                      index={0}
                      key="header-0"
                    >
                      <th>
                        Name
                      </th>
                    </DataTableElement>
                    <DataTableElement
                      element="Type"
                      formatter={[Function]}
                      index={1}
                      key="header-1"
                    >
                      <th>
                        Type
                      </th>
                    </DataTableElement>
                    <DataTableElement
                      element="Version"
                      formatter={[Function]}
                      index={2}
                      key="header-2"
                    >
                      <th>
                        Version
                      </th>
                    </DataTableElement>
                    <DataTableElement
                      element="Fulfilled"
                      formatter={[Function]}
                      index={3}
                      key="header-3"
                    >
                      <th>
                        Fulfilled
                      </th>
                    </DataTableElement>
                  </tr>
                </thead>
                <tbody>
                  <DataTableElement
                    element={
                      Object {
                        "fulfilled": false,
                        "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
                        "type": "plugin-version",
                        "version": ">=3.0.0-alpha.2",
                      }
                    }
                    formatter={[Function]}
                    index={0}
                    key="row-0"
                  >
                    <tr>
                      <td>
                        org.graylog.plugins.threatintel.ThreatIntelPlugin
                      </td>
                      <td>
                        plugin-version
                      </td>
                      <td>
                        &gt;=3.0.0-alpha.2
                      </td>
                      <td>
                        <ForwardRef
                          className="failure"
                        >
                          <Badge__StyledBadge
                            className="failure"
                          >
                            <StyledComponent
                              className="failure"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "Badge__StyledBadge-sc-4gzqz0-0",
                                    "isStatic": false,
                                    "lastClassName": "gDhrrS",
                                    "rules": Array [
                                      [Function],
                                    ],
                                  },
                                  "displayName": "Badge__StyledBadge",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "Badge__StyledBadge-sc-4gzqz0-0",
                                  "target": [Function],
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <Badge
                                bsClass="badge"
                                className="failure Badge__StyledBadge-sc-4gzqz0-0 gDhrrS"
                                pullRight={false}
                              >
                                <span
                                  className="failure Badge__StyledBadge-sc-4gzqz0-0 gDhrrS badge"
                                >
                                  <Icon
                                    name="times"
                                  >
                                    <FontAwesomeIcon
                                      border={false}
                                      className=""
                                      fixedWidth={false}
                                      flip={null}
                                      icon="times"
                                      inverse={false}
                                      listItem={false}
                                      mask={null}
                                      pull={null}
                                      pulse={false}
                                      rotation={null}
                                      size={null}
                                      spin={false}
                                      swapOpacity={false}
                                      symbol={false}
                                      title=""
                                      transform={null}
                                    >
                                      <svg
                                        aria-hidden="true"
                                        className="svg-inline--fa fa-times fa-w-11 "
                                        data-icon="times"
                                        data-prefix="fas"
                                        focusable="false"
                                        role="img"
                                        style={Object {}}
                                        viewBox="0 0 352 512"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                          fill="currentColor"
                                          style={Object {}}
                                        />
                                      </svg>
                                    </FontAwesomeIcon>
                                  </Icon>
                                </span>
                              </Badge>
                            </StyledComponent>
                          </Badge__StyledBadge>
                        </ForwardRef>
                      </td>
                    </tr>
                  </DataTableElement>
                  <DataTableElement
                    element={
                      Object {
                        "fulfilled": true,
                        "type": "server-version",
                        "version": ">=3.0.0-alpha.2+af8d8e0",
                      }
                    }
                    formatter={[Function]}
                    index={1}
                    key="row-1"
                  >
                    <tr>
                      <td>
                        Graylog
                      </td>
                      <td>
                        server-version
                      </td>
                      <td>
                        &gt;=3.0.0-alpha.2+af8d8e0
                      </td>
                      <td>
                        <ForwardRef
                          className="success"
                        >
                          <Badge__StyledBadge
                            className="success"
                          >
                            <StyledComponent
                              className="success"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "Badge__StyledBadge-sc-4gzqz0-0",
                                    "isStatic": false,
                                    "lastClassName": "gDhrrS",
                                    "rules": Array [
                                      [Function],
                                    ],
                                  },
                                  "displayName": "Badge__StyledBadge",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "Badge__StyledBadge-sc-4gzqz0-0",
                                  "target": [Function],
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <Badge
                                bsClass="badge"
                                className="success Badge__StyledBadge-sc-4gzqz0-0 gDhrrS"
                                pullRight={false}
                              >
                                <span
                                  className="success Badge__StyledBadge-sc-4gzqz0-0 gDhrrS badge"
                                >
                                  <Icon
                                    name="check"
                                  >
                                    <FontAwesomeIcon
                                      border={false}
                                      className=""
                                      fixedWidth={false}
                                      flip={null}
                                      icon="check"
                                      inverse={false}
                                      listItem={false}
                                      mask={null}
                                      pull={null}
                                      pulse={false}
                                      rotation={null}
                                      size={null}
                                      spin={false}
                                      swapOpacity={false}
                                      symbol={false}
                                      title=""
                                      transform={null}
                                    >
                                      <svg
                                        aria-hidden="true"
                                        className="svg-inline--fa fa-check fa-w-16 "
                                        data-icon="check"
                                        data-prefix="fas"
                                        focusable="false"
                                        role="img"
                                        style={Object {}}
                                        viewBox="0 0 512 512"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                                          fill="currentColor"
                                          style={Object {}}
                                        />
                                      </svg>
                                    </FontAwesomeIcon>
                                  </Icon>
                                </span>
                              </Badge>
                            </StyledComponent>
                          </Badge__StyledBadge>
                        </ForwardRef>
                      </td>
                    </tr>
                  </DataTableElement>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </DataTable>
  </div>
</ContentPackConstraints>
`;

exports[`<ContentPackConstraints /> should render with new constraints with forced fulfillment 1`] = `
<ContentPackConstraints
  constraints={
    Array [
      Object {
        "fulfilled": undefined,
        "type": "server-version",
        "version": ">=3.0.0-alpha.2+af8d8e0",
      },
      Object {
        "fulfilled": undefined,
        "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
        "type": "plugin-version",
        "version": ">=3.0.0-alpha.2",
      },
    ]
  }
  isFulfilled={true}
>
  <div>
    <h2>
      Constraints
    </h2>
    <br />
    <br />
    <DataTable
      className=""
      dataRowFormatter={[Function]}
      displayKey="value"
      filterBy=""
      filterKeys={Array []}
      filterLabel="Filter"
      filterSuggestions={Array []}
      headerCellFormatter={[Function]}
      headers={
        Array [
          "Name",
          "Type",
          "Version",
          "Fulfilled",
        ]
      }
      id="content-packs-constraints"
      noDataText="No data available."
      rowClassName=""
      rows={
        Array [
          Object {
            "fulfilled": undefined,
            "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
            "type": "plugin-version",
            "version": ">=3.0.0-alpha.2",
          },
          Object {
            "fulfilled": undefined,
            "type": "server-version",
            "version": ">=3.0.0-alpha.2+af8d8e0",
          },
        ]
      }
      sortBy={[Function]}
      useResponsiveTable={true}
    >
      <div>
        <div
          className="row "
        >
          <div
            className="col-md-12"
          >
            <div
              className="data-table table-responsive"
              id="content-packs-constraints"
            >
              <table
                className="table "
              >
                <thead>
                  <tr>
                    <DataTableElement
                      element="Name"
                      formatter={[Function]}
                      index={0}
                      key="header-0"
                    >
                      <th>
                        Name
                      </th>
                    </DataTableElement>
                    <DataTableElement
                      element="Type"
                      formatter={[Function]}
                      index={1}
                      key="header-1"
                    >
                      <th>
                        Type
                      </th>
                    </DataTableElement>
                    <DataTableElement
                      element="Version"
                      formatter={[Function]}
                      index={2}
                      key="header-2"
                    >
                      <th>
                        Version
                      </th>
                    </DataTableElement>
                    <DataTableElement
                      element="Fulfilled"
                      formatter={[Function]}
                      index={3}
                      key="header-3"
                    >
                      <th>
                        Fulfilled
                      </th>
                    </DataTableElement>
                  </tr>
                </thead>
                <tbody>
                  <DataTableElement
                    element={
                      Object {
                        "fulfilled": undefined,
                        "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
                        "type": "plugin-version",
                        "version": ">=3.0.0-alpha.2",
                      }
                    }
                    formatter={[Function]}
                    index={0}
                    key="row-0"
                  >
                    <tr>
                      <td>
                        org.graylog.plugins.threatintel.ThreatIntelPlugin
                      </td>
                      <td>
                        plugin-version
                      </td>
                      <td>
                        &gt;=3.0.0-alpha.2
                      </td>
                      <td>
                        <ForwardRef
                          className="success"
                        >
                          <Badge__StyledBadge
                            className="success"
                          >
                            <StyledComponent
                              className="success"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "Badge__StyledBadge-sc-4gzqz0-0",
                                    "isStatic": false,
                                    "lastClassName": "gDhrrS",
                                    "rules": Array [
                                      [Function],
                                    ],
                                  },
                                  "displayName": "Badge__StyledBadge",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "Badge__StyledBadge-sc-4gzqz0-0",
                                  "target": [Function],
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <Badge
                                bsClass="badge"
                                className="success Badge__StyledBadge-sc-4gzqz0-0 gDhrrS"
                                pullRight={false}
                              >
                                <span
                                  className="success Badge__StyledBadge-sc-4gzqz0-0 gDhrrS badge"
                                >
                                  <Icon
                                    name="check"
                                  >
                                    <FontAwesomeIcon
                                      border={false}
                                      className=""
                                      fixedWidth={false}
                                      flip={null}
                                      icon="check"
                                      inverse={false}
                                      listItem={false}
                                      mask={null}
                                      pull={null}
                                      pulse={false}
                                      rotation={null}
                                      size={null}
                                      spin={false}
                                      swapOpacity={false}
                                      symbol={false}
                                      title=""
                                      transform={null}
                                    >
                                      <svg
                                        aria-hidden="true"
                                        className="svg-inline--fa fa-check fa-w-16 "
                                        data-icon="check"
                                        data-prefix="fas"
                                        focusable="false"
                                        role="img"
                                        style={Object {}}
                                        viewBox="0 0 512 512"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                                          fill="currentColor"
                                          style={Object {}}
                                        />
                                      </svg>
                                    </FontAwesomeIcon>
                                  </Icon>
                                </span>
                              </Badge>
                            </StyledComponent>
                          </Badge__StyledBadge>
                        </ForwardRef>
                      </td>
                    </tr>
                  </DataTableElement>
                  <DataTableElement
                    element={
                      Object {
                        "fulfilled": undefined,
                        "type": "server-version",
                        "version": ">=3.0.0-alpha.2+af8d8e0",
                      }
                    }
                    formatter={[Function]}
                    index={1}
                    key="row-1"
                  >
                    <tr>
                      <td>
                        Graylog
                      </td>
                      <td>
                        server-version
                      </td>
                      <td>
                        &gt;=3.0.0-alpha.2+af8d8e0
                      </td>
                      <td>
                        <ForwardRef
                          className="success"
                        >
                          <Badge__StyledBadge
                            className="success"
                          >
                            <StyledComponent
                              className="success"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "Badge__StyledBadge-sc-4gzqz0-0",
                                    "isStatic": false,
                                    "lastClassName": "gDhrrS",
                                    "rules": Array [
                                      [Function],
                                    ],
                                  },
                                  "displayName": "Badge__StyledBadge",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "Badge__StyledBadge-sc-4gzqz0-0",
                                  "target": [Function],
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <Badge
                                bsClass="badge"
                                className="success Badge__StyledBadge-sc-4gzqz0-0 gDhrrS"
                                pullRight={false}
                              >
                                <span
                                  className="success Badge__StyledBadge-sc-4gzqz0-0 gDhrrS badge"
                                >
                                  <Icon
                                    name="check"
                                  >
                                    <FontAwesomeIcon
                                      border={false}
                                      className=""
                                      fixedWidth={false}
                                      flip={null}
                                      icon="check"
                                      inverse={false}
                                      listItem={false}
                                      mask={null}
                                      pull={null}
                                      pulse={false}
                                      rotation={null}
                                      size={null}
                                      spin={false}
                                      swapOpacity={false}
                                      symbol={false}
                                      title=""
                                      transform={null}
                                    >
                                      <svg
                                        aria-hidden="true"
                                        className="svg-inline--fa fa-check fa-w-16 "
                                        data-icon="check"
                                        data-prefix="fas"
                                        focusable="false"
                                        role="img"
                                        style={Object {}}
                                        viewBox="0 0 512 512"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                                          fill="currentColor"
                                          style={Object {}}
                                        />
                                      </svg>
                                    </FontAwesomeIcon>
                                  </Icon>
                                </span>
                              </Badge>
                            </StyledComponent>
                          </Badge__StyledBadge>
                        </ForwardRef>
                      </td>
                    </tr>
                  </DataTableElement>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </DataTable>
  </div>
</ContentPackConstraints>
`;

exports[`<ContentPackConstraints /> should render with new constraints without forced fulfillment 1`] = `
<ContentPackConstraints
  constraints={
    Array [
      Object {
        "fulfilled": undefined,
        "type": "server-version",
        "version": ">=3.0.0-alpha.2+af8d8e0",
      },
      Object {
        "fulfilled": undefined,
        "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
        "type": "plugin-version",
        "version": ">=3.0.0-alpha.2",
      },
    ]
  }
  isFulfilled={false}
>
  <div>
    <h2>
      Constraints
    </h2>
    <br />
    <br />
    <DataTable
      className=""
      dataRowFormatter={[Function]}
      displayKey="value"
      filterBy=""
      filterKeys={Array []}
      filterLabel="Filter"
      filterSuggestions={Array []}
      headerCellFormatter={[Function]}
      headers={
        Array [
          "Name",
          "Type",
          "Version",
          "Fulfilled",
        ]
      }
      id="content-packs-constraints"
      noDataText="No data available."
      rowClassName=""
      rows={
        Array [
          Object {
            "fulfilled": undefined,
            "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
            "type": "plugin-version",
            "version": ">=3.0.0-alpha.2",
          },
          Object {
            "fulfilled": undefined,
            "type": "server-version",
            "version": ">=3.0.0-alpha.2+af8d8e0",
          },
        ]
      }
      sortBy={[Function]}
      useResponsiveTable={true}
    >
      <div>
        <div
          className="row "
        >
          <div
            className="col-md-12"
          >
            <div
              className="data-table table-responsive"
              id="content-packs-constraints"
            >
              <table
                className="table "
              >
                <thead>
                  <tr>
                    <DataTableElement
                      element="Name"
                      formatter={[Function]}
                      index={0}
                      key="header-0"
                    >
                      <th>
                        Name
                      </th>
                    </DataTableElement>
                    <DataTableElement
                      element="Type"
                      formatter={[Function]}
                      index={1}
                      key="header-1"
                    >
                      <th>
                        Type
                      </th>
                    </DataTableElement>
                    <DataTableElement
                      element="Version"
                      formatter={[Function]}
                      index={2}
                      key="header-2"
                    >
                      <th>
                        Version
                      </th>
                    </DataTableElement>
                    <DataTableElement
                      element="Fulfilled"
                      formatter={[Function]}
                      index={3}
                      key="header-3"
                    >
                      <th>
                        Fulfilled
                      </th>
                    </DataTableElement>
                  </tr>
                </thead>
                <tbody>
                  <DataTableElement
                    element={
                      Object {
                        "fulfilled": undefined,
                        "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
                        "type": "plugin-version",
                        "version": ">=3.0.0-alpha.2",
                      }
                    }
                    formatter={[Function]}
                    index={0}
                    key="row-0"
                  >
                    <tr>
                      <td>
                        org.graylog.plugins.threatintel.ThreatIntelPlugin
                      </td>
                      <td>
                        plugin-version
                      </td>
                      <td>
                        &gt;=3.0.0-alpha.2
                      </td>
                      <td>
                        <ForwardRef
                          className="failure"
                        >
                          <Badge__StyledBadge
                            className="failure"
                          >
                            <StyledComponent
                              className="failure"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "Badge__StyledBadge-sc-4gzqz0-0",
                                    "isStatic": false,
                                    "lastClassName": "gDhrrS",
                                    "rules": Array [
                                      [Function],
                                    ],
                                  },
                                  "displayName": "Badge__StyledBadge",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "Badge__StyledBadge-sc-4gzqz0-0",
                                  "target": [Function],
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <Badge
                                bsClass="badge"
                                className="failure Badge__StyledBadge-sc-4gzqz0-0 gDhrrS"
                                pullRight={false}
                              >
                                <span
                                  className="failure Badge__StyledBadge-sc-4gzqz0-0 gDhrrS badge"
                                >
                                  <Icon
                                    name="times"
                                  >
                                    <FontAwesomeIcon
                                      border={false}
                                      className=""
                                      fixedWidth={false}
                                      flip={null}
                                      icon="times"
                                      inverse={false}
                                      listItem={false}
                                      mask={null}
                                      pull={null}
                                      pulse={false}
                                      rotation={null}
                                      size={null}
                                      spin={false}
                                      swapOpacity={false}
                                      symbol={false}
                                      title=""
                                      transform={null}
                                    >
                                      <svg
                                        aria-hidden="true"
                                        className="svg-inline--fa fa-times fa-w-11 "
                                        data-icon="times"
                                        data-prefix="fas"
                                        focusable="false"
                                        role="img"
                                        style={Object {}}
                                        viewBox="0 0 352 512"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                          fill="currentColor"
                                          style={Object {}}
                                        />
                                      </svg>
                                    </FontAwesomeIcon>
                                  </Icon>
                                </span>
                              </Badge>
                            </StyledComponent>
                          </Badge__StyledBadge>
                        </ForwardRef>
                      </td>
                    </tr>
                  </DataTableElement>
                  <DataTableElement
                    element={
                      Object {
                        "fulfilled": undefined,
                        "type": "server-version",
                        "version": ">=3.0.0-alpha.2+af8d8e0",
                      }
                    }
                    formatter={[Function]}
                    index={1}
                    key="row-1"
                  >
                    <tr>
                      <td>
                        Graylog
                      </td>
                      <td>
                        server-version
                      </td>
                      <td>
                        &gt;=3.0.0-alpha.2+af8d8e0
                      </td>
                      <td>
                        <ForwardRef
                          className="failure"
                        >
                          <Badge__StyledBadge
                            className="failure"
                          >
                            <StyledComponent
                              className="failure"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "Badge__StyledBadge-sc-4gzqz0-0",
                                    "isStatic": false,
                                    "lastClassName": "gDhrrS",
                                    "rules": Array [
                                      [Function],
                                    ],
                                  },
                                  "displayName": "Badge__StyledBadge",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "Badge__StyledBadge-sc-4gzqz0-0",
                                  "target": [Function],
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <Badge
                                bsClass="badge"
                                className="failure Badge__StyledBadge-sc-4gzqz0-0 gDhrrS"
                                pullRight={false}
                              >
                                <span
                                  className="failure Badge__StyledBadge-sc-4gzqz0-0 gDhrrS badge"
                                >
                                  <Icon
                                    name="times"
                                  >
                                    <FontAwesomeIcon
                                      border={false}
                                      className=""
                                      fixedWidth={false}
                                      flip={null}
                                      icon="times"
                                      inverse={false}
                                      listItem={false}
                                      mask={null}
                                      pull={null}
                                      pulse={false}
                                      rotation={null}
                                      size={null}
                                      spin={false}
                                      swapOpacity={false}
                                      symbol={false}
                                      title=""
                                      transform={null}
                                    >
                                      <svg
                                        aria-hidden="true"
                                        className="svg-inline--fa fa-times fa-w-11 "
                                        data-icon="times"
                                        data-prefix="fas"
                                        focusable="false"
                                        role="img"
                                        style={Object {}}
                                        viewBox="0 0 352 512"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                          fill="currentColor"
                                          style={Object {}}
                                        />
                                      </svg>
                                    </FontAwesomeIcon>
                                  </Icon>
                                </span>
                              </Badge>
                            </StyledComponent>
                          </Badge__StyledBadge>
                        </ForwardRef>
                      </td>
                    </tr>
                  </DataTableElement>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </DataTable>
  </div>
</ContentPackConstraints>
`;
